<resources>
    <string name="app_name">智慧民工</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="str_login_or_register">登录/注册</string>
    <string name="str_report_record">举报记录</string>
    <string name="str_prize_record">获奖记录</string>
    <string name="str_my_collect">我的收藏</string>
    <string name="str_settings">设置</string>
    <string name="str_user_auth_error">您的账号已在其他设备登录，用户权限失效。请重新登录？</string>
    <string name="str_cancel">取消</string>
    <string name="str_login">登录</string>
    <string name="str_loading">加载中</string>
    <string name="str_input_phone">请输入手机号</string>
    <string name="str_input_password">请输入密码</string>
    <string name="str_new_user">新用户</string>
    <string name="str_forgetpwd_extend">忘记密码?</string>
    <string name="str_setting">设置</string>
    <string name="str_app_version">软件版本</string>
    <string name="str_exit_login">退出登录</string>
    <string name="str_app_cache">应用缓存(点击清空)</string>

    <string name="title_activity_index">IndexActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_register">注册</string>
    <string name="str_input_verifycode">请输入验证码</string>
    <string name="str_send_verify">发送验证码</string>
    <string name="str_user_protocol">《用户使用协议》</string>
    <string name="str_agree">同意</string>
    <string name="str_reset_pwd">重置密码</string>
    <string name="str_submit">提交</string>
    <string name="str_version0">V1.0</string>
    <string name="str_input_idcard">请输入身份证号</string>
    <string name="str_saraly">工资记录</string>
    <string name="ic_work">出勤记录</string>
    <string name="str_state_coming">进行中</string>
    <string name="str_state_finish">已完工</string>
    <string name="str_pro_state">工程状态:</string>
    <string name="str_pro_worktype">担任工种:</string>
    <string name="str_to">至</string>
    <string name="str_pro_time">工程周期:</string>
    <string name="str_pro_name">工程名称:</string>
    <string name="str_edit_pwd">修改密码</string>
    <string name="str_work">已出勤</string>
    <string name="str_no_work">未出勤</string>

    <string name="str_state_send">已发放</string>
    <string name="str_state_no_send">未发放</string>
    <string name="str_work_ex">工作经验</string>
    <string name="str_salary_limit">薪资范围</string>
    <string name="str_location_area">所在地区</string>
    <string name="str_employer">招工信息</string>
    <string name="str_ex">经验:</string>
    <string name="str_salary_tips">薪资:</string>
    <string name="str_employee">招聘人数:</string>
    <string name="str_work_jingli">工作经历</string>
    <string name="str_mine_center">个人中心</string>
    <string name="str_law">法律法规</string>
    <string name="str_care">维权举报</string>
    <string name="str_care_tips">农民工便捷服务</string>
    <string name="str_face_detect">人脸采集</string>
    <string name="str_face_detect_tips">请确保人脸清晰可见，背景无杂物</string>
    <string name="str_right_detect">开始采集</string>
    <string name="str_detect_tips2">(采集完成，即可上传人脸数据)</string>
    <string name="str_build_unit">承建单位:</string>
    <string name="str_upload_face">上传人脸</string>
    <string name="str_required_bracket">(必填)</string>
    <string name="str_not_required_bracket">(非必填)</string>
    <string name="str_pass_location">举报单位:</string>
    <string name="str_pass_title">反映标题:</string>
    <string name="str_people_pass">线索举报</string>
    <string name="str_pass_images">现场实景图片(最多9张):</string>
    <string name="str_pass_voice">语音留言(最多10分钟):</string>
    <string name="str_click_start_speak">点击开始录制</string>
    <string name="str_pass_question_desc">详细内容(问题描述)</string>
    <string name="str_total_time">总:10分钟</string>
    <string name="str_residue_time">剩余:%1$d分%2$d秒</string>
    <string name="str_stop_record">停止录制</string>
    <string name="str_record_hints">(录制完成点击播放，长按清除)</string>
    <string name="str_enter_submit">确定提交</string>
    <string name="state_deal">已处理</string>
    <string name="state_no">未处理</string>
</resources>
