<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tlb_face"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/str_face_detect"
            android:elevation="3dip"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            tools:targetApi="lollipop" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="20dip"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/str_face_detect_tips"/>
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_face"
                android:src="@drawable/ic_image_black_24dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dip"
                android:layout_width="150dip"
                android:layout_height="200dip" />
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:id="@+id/btn_detect"
                android:text="@string/str_right_detect"
                android:theme="@style/Button"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:id="@+id/btn_upload"
                android:text="@string/str_upload_face"
                android:theme="@style/GreenButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dip"
                android:text="@string/str_detect_tips2"/>
        </LinearLayout>
    </LinearLayout>
</layout>