<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginModel"
            type="com.cloudcreativity.intellijworker.loginAndRegister.LoginModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/login_content"
            android:padding="20dip"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_f1f1f1"
                android:inputType="text"
                android:text="@={loginModel.phone}"
                android:background="@drawable/ic_bottom_line_1px_white"
                android:hint="@string/str_input_idcard"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_marginTop="10dip"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:text="@={loginModel.pwd}"
                android:textColorHint="@color/gray_f1f1f1"
                android:background="@drawable/ic_bottom_line_1px_white"
                android:hint="@string/str_input_password"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_marginTop="20dip"
                android:background="@drawable/login_button"
                android:text="@string/str_login"
                android:textColor="@color/white"
                android:onClick="@{(view)->loginModel.onLoginClick()}"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</layout>