<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.cloudcreativity.intellijworker.fragments.FgHomeModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:background="@color/gray_f1f1f1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:gravity="center"
                app:layout_scrollFlags="scroll"
                android:layout_height="?attr/actionBarSize">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16"/>
            </LinearLayout>

            <com.youth.banner.Banner
                android:id="@+id/bannerHome"
                app:layout_scrollFlags="scroll"
                android:layout_width="match_parent"
                android:layout_height="180dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                app:layout_scrollFlags="scroll"
                android:textSize="@dimen/sp16"
                android:text="@string/str_employer"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                tools:targetApi="lollipop">
                <TextView
                    android:id="@+id/tv_work"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:gravity="center"
                    android:maxLines="1"
                    android:onClick="@{()->model.onExClick()}"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_gray_24dp"
                    android:text="@string/str_work_ex"/>
                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:background="@color/gray_f1f1f1"/>
                <TextView
                    android:id="@+id/tv_salary"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:gravity="center"
                    android:maxLines="1"
                    android:onClick="@{()->model.onSalaryClick()}"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_gray_24dp"
                    android:text="@string/str_salary_limit"/>
                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:background="@color/gray_f1f1f1"/>
                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dip"
                    android:gravity="center"
                    android:maxLines="1"
                    android:onClick="@{()->model.onAreaClick()}"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_gray_24dp"
                    android:text="@string/str_location_area"/>
            </LinearLayout>

        </android.support.design.widget.AppBarLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_home"
            android:layout_marginTop="5dip"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:adapter="@{model.adapter}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.CoordinatorLayout>
</layout>