<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="model"
            type="com.cloudcreativity.intellijworker.fragments.FgMineModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp16"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/str_mine_center"/>
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/iv_settings"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="15dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:padding="5dip"
                android:onClick="@{()->model.onSetClick()}"
                android:src="@drawable/ic_settings_white_24dp"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dip"
            android:paddingEnd="20dip"
            android:paddingTop="10dip"
            android:paddingBottom="20dip"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            tools:targetApi="lollipop">
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:targetApi="lollipop">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{model.user.workerDomain.workerName}"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tv_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_f1f1f1"
                    android:drawableStart="@mipmap/ic_birthday"
                    android:drawablePadding="5dip"
                    android:textSize="@dimen/sp14"
                    android:layout_marginTop="10dip"
                    android:text="@{model.user.workerDomain.birthday}"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray_f1f1f1"
                        android:drawableStart="@mipmap/location"
                        android:drawablePadding="5dip"
                        android:text="@{model.user.workerDomain.address}"/>
                </LinearLayout>
            </LinearLayout>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="80dip"
                android:layout_height="80dip"
                mineAvatar="@{model.user.workerDomain.headImage}" />
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{()->model.onFaceClick()}"
                android:padding="10dip"
                android:orientation="horizontal">
                <TextView
                    android:drawableStart="@mipmap/ic_face_detect"
                    android:text="@string/str_face_detect"
                    android:padding="5dip"
                    android:textSize="@dimen/sp16"
                    android:drawablePadding="10dip"
                    android:textColor="@color/gray_515151"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->model.onLawClick()}"
            android:layout_marginStart="10dip"
            android:layout_marginEnd="10dip">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:orientation="horizontal">
                <TextView
                    android:drawableStart="@mipmap/ic_law"
                    android:text="@string/str_law"
                    android:padding="5dip"
                    android:textColor="@color/gray_515151"
                    android:gravity="center"
                    android:textSize="@dimen/sp16"
                    android:drawablePadding="10dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->model.onReportClick()}"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dip"
                android:orientation="horizontal">
                <TextView
                    android:drawableStart="@mipmap/ic_report"
                    android:text="@string/str_care"
                    android:padding="5dip"
                    android:textSize="@dimen/sp16"
                    android:drawablePadding="10dip"
                    android:textColor="@color/gray_515151"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>